merge output .places and .trans files contents with .nupn file; only .nupn file is output.